<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceScreen android:title="充電中のLEDに関する設定"
        android:summary="充電中のLEDの色や充電完了時のLEDの状態の設定をします">
   <PreferenceCategory android:title="@string/preference_category_title_1">
      <ListPreference
      android:key = "full"
      android:title = "@string/full_battery_title"
      android:dialogTitle = "@string/full_battery_dialog_title"
      android:entries="@array/colorEntries"
      android:entryValues="@array/entryValues"
      android:defaultValue="@string/full_battery_default_color"/>
      <ListPreference
      android:key = "middle"
      android:title = "@string/middle_battery_title"
      android:dialogTitle = "@string/middle_battery_dialog_title"
      android:entries="@array/colorEntries"
      android:entryValues="@array/entryValues"
      android:defaultValue="@string/middle_battery_default_color"/>
      <ListPreference
      android:key = "low"
      android:title = "@string/low_battery_title"
      android:dialogTitle = "@string/low_battery_dialog_title"
      android:entries="@array/colorEntries"
      android:entryValues="@array/entryValues"
      android:defaultValue="@string/low_battery_default_color"/>
    </PreferenceCategory>
   	<PreferenceCategory android:title="@string/preference_category_title_3">
   	    <CheckBoxPreference
   	        android:key="config_led_off_when_battery_fully_charged"
   	        android:title="@string/config_led_off_when_battery_fully_charged"
   	        android:summaryOn="@string/led_off"
   	        android:summaryOff="@string/led_on" />
   	</PreferenceCategory>
   </PreferenceScreen>
    <PreferenceScreen android:title="バッテリー警告ダイアログ設定"
        android:summary="バッテリー警告ダイアログの表示タイミングの設定をします">
    	<PreferenceCategory android:title="@string/preference_category_title_2">
	    <com.hagurekamome.batterymod.ValueSeekBarPreference
	        android:key="lowbattery"
	        android:title="@string/first_battery_warnning_title"
	        android:summary="@string/first_battery_warnning_dialog_title"
            displayFormat="%d％未満で警告を表示"
            android:defaultValue="15" />
	    <com.hagurekamome.batterymod.ValueSeekBarPreference
	        android:key="criticalbattery"
	        android:title="@string/second_battery_warnning_title"
	        android:summary="@string/second_battery_warnning_dialog_title"
            displayFormat="%d％未満で２回目の警告を表示"
            android:defaultValue="4" />
	    <com.hagurekamome.batterymod.ValueSeekBarPreference
	        android:key="clearwarnning"
	        android:title="@string/close_battery_warnning_title"
	        android:summary="@string/close_battery_warnning_dialog_title"
			displayFormat="%d％以上で警告を消す"
            android:defaultValue="20" />
   	</PreferenceCategory>
   </PreferenceScreen>
</PreferenceScreen>
